tests/NormalTests/paczka1/small_fuzzy/75608878.err
Error in line 1: kxhkL S450 20,6
Error in line 8: HNP7w0WeYZ S450 1,7
